[gd_scene load_steps=15 format=3 uid="uid://dllqsxj26ebky"]

[ext_resource type="Texture2D" uid="uid://fmyasovltndw" path="res://assets/Spritesheet/Enemy/Idle.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_qbilx"]
[ext_resource type="Texture2D" uid="uid://dtpswpxue0m3i" path="res://assets/Spritesheet/Enemy/Walk.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bymplsnltx4ad" path="res://assets/Spritesheet/Enemy/Attacks.png" id="3"]
[ext_resource type="Texture2D" uid="uid://d4jk7jkh6pnes" path="res://assets/Spritesheet/Enemy/HurtDeath.png" id="4"]
[ext_resource type="AudioStream" uid="uid://ormrrbdcmghj" path="res://assets/SFX/mixkit-metal-hit-woosh-1485.ogg" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(7.25978, 29.8068)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(25.076, 41.7338)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(25.0432, 22.846)

[sub_resource type="Animation" id="4"]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"hit"
}, {
"args": [],
"method": &"end_of_hit"
}, {
"args": [],
"method": &"start_walk"
}]
}

[sub_resource type="Animation" id="5"]
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Death:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="6"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="7"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0dvne"]
_data = {
"Attack": SubResource("4"),
"Death": SubResource("5"),
"Idle": SubResource("6"),
"Walk": SubResource("7")
}

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_qbilx")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-0.0704994, -14.4175)
shape = SubResource("1")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(20.5061, -21.3546)
shape = SubResource("2")

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
modulate = Color(0.180392, 0.180392, 0.752941, 1)
self_modulate = Color(0.239216, 0.235294, 0.760784, 1)
position = Vector2(20.5729, -19.5988)
shape = SubResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0dvne")
}

[node name="Walk" type="Sprite2D" parent="."]
position = Vector2(9.82705, -24.3363)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2")
hframes = 6
frame = 2

[node name="Idle" type="Sprite2D" parent="."]
position = Vector2(9.827, -24.336)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1")
hframes = 4
frame = 3

[node name="Attack" type="Sprite2D" parent="."]
position = Vector2(9.82705, -24.3363)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3")
hframes = 8

[node name="Death" type="Sprite2D" parent="."]
position = Vector2(9.827, -24.336)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4")
hframes = 7

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(5.27652, -29.1915)
target_position = Vector2(0, 30)
collision_mask = 2

[node name="AttackSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")

[node name="StunnedTimer" type="Timer" parent="."]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="timeout" from="StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
